# game

./: .editorconfig  .gitmodules  CMakeLists.txt  GNUmakefile  README.md  main.c  main2.c  makefile  platformer.tiled-session
assets/: pallete.pal  player.ase  testMap.tmx  tiles.ase  tiles.tsx
make/: cco.mk  color.mk  make.mk
